--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Ali Karbassi <ali@karbassi.com>",
   "license": "MIT",
   "dependencies": {
+    "phaser": "^3.55.2",
     "typescript": "^4.6.3"
   }
 }
