--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "session-10",
+  "name": "demo-phaser-game",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "vite",
+    "build": "vite build"
   },
   "keywords": [],
   "author": "Ali Karbassi <ali@karbassi.com>",
